Homepage squares done, fixed links, products page spacing fixed

--- a/wp-content/themes/AJOTO/assets/scss/partials/_page.scss
+++ b/wp-content/themes/AJOTO/assets/scss/partials/_page.scss
@@ -476,34 +476,35 @@ nav#page{
                     &:last-child{
                         margin-right:0;
                     }
+                    &.blog{
+                        background: url('assets/images/home-journey.jpg') no-repeat ;
+                    }
+                    &.shop{
+                        background: url('assets/images/home-shop.jpg') no-repeat ;
+                    }
+                    &.products{
+                        background: url('assets/images/home-products.jpg') no-repeat ;
+                    }
                 }
 
                 a{
                     height: 100%;
                     width:100%;
                     display: block;
-                    padding-top: 80px;
-                    color: $grey2;
-                    background: $grey9;
+                    padding-top:144px;
+                    color: $grey5;
+                    border: 1px solid $grey9;
                     text-decoration: none;
-                    font-size:1.7em;
+                    font-size:1em;
                     p{
                         margin:0;
                         padding:0;
-                        font-family: $sans-serif;
-                    }
-                    div{
-                        height: 1px;
-                        width:60px;
-                        background: $grey2;
-                        margin: 0 auto;
-                        margin-top: 10px;
-                        margin-bottom: 10px;
+                        font-family: $ssbold;
                     }
                     small{
                         display: block;
                         clear: both;
-                        font-size: 0.4em;
+                        font-size: 0.6em;
                         width: 70%;
                         margin:0 auto;
                         font-family: $sans-serif;
@@ -517,7 +518,7 @@ nav#page{
                         padding-top: 0.6em;
                     }
                     &:hover{
-                        background: $grey7;
+                        border: 1px solid $grey6;
                         color: $grey3;
                     }
                 }
@@ -697,6 +698,7 @@ nav#page{
             width:100%;
             max-width: 850px;
             margin: 0 auto;
+            clear: both;
             @include bp(phone){
                 margin:10px;
             }
@@ -1631,6 +1633,9 @@ nav#page{
                 width:33.3%;
             }
         }
+    }
+    .slideshow{
+        margin-top: 10px;
     }
     ul#faq{
         padding:0;
